--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,14 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-donuts title="titulo1"></app-donuts>
+    </div>
+    <div class="col-6">
+        <app-donuts [labels]="labels2" [data]="data2"></app-donuts>
+    </div>
+    <div class="col-6">
+        <app-donuts></app-donuts>
+    </div>
+    <div class="col-6">
+        <app-donuts></app-donuts>
+    </div>
+</div>
