--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,35 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Progress bar</h4>
+                <div class="progress m-t-20">
+                    <div [style.width]="getProgreso1" style="height:10px;" class="progress-bar bg-primary progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                    </div>
+                </div>
+
+                <div class="progress m-t-20">
+                    <div [style.width]="getProgreso2" style="height:10px;" class="progress-bar bg-info progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--  [style.width]="progreso + '%'"  -->
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador (emiteValor)="progreso1 = $event" [recibeValor]="progreso1" [btnClass]="'btn-primary'"></app-incrementador>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador (emiteValor)="progreso2 = $event" [recibeValor]="progreso2" [btnClass]="'btn-info'"></app-incrementador>
+            </div>
+        </div>
+    </div>
+</div>
