--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -11,4 +11,13 @@
             © 2020 Admin Pro by wrappixel.com
         </footer>
     </div>
+  <!--   <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+    
+                </div>
+            </div>
+        </div>
+    </div> -->
 </div>
