--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,11 @@
     animation-fill-mode: both;
 }
 
-#themecolors .selector {
+#themecolors .selector .cursor {
     cursor: pointer;
+}
+
+#google-btn {
+    display: flex;
+    justify-content: center;
 }
