--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,35 @@
     width: 200px;
     height: 200px;
 }
+
+.w100 {
+    width: 100px;
+}
+
+.w140 {
+    width: 140px;
+}
+
+.avatar {
+    width: 30px;
+    border-radius: 100%;
+    border: 1px solid grey;
+}
+
+.fondo-modal-imagen {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
+
+.oculto {
+    display: none;
+}
+
+.pointer {
+    cursor: pointer;
+}
