--- a/src/app/pages/mantenimientos/medicos/medicos.component.html
+++ b/src/app/pages/mantenimientos/medicos/medicos.component.html
@@ -2,13 +2,14 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <input type="text" class="form-control" placeholder="Buscar usuario">
+                <input type="text" class="form-control" placeholder="Buscar usuario" (keyup)="buscar(txtTermino.value)"
+                       #txtTermino>
             </div>
         </div>
     </div>
 </div>
 
-<div class="row animated fadeIn fast">
+<div class="row animated fadeIn fast" *ngIf="cargando">
     <div class="col-12">
         <div class="alert alert-info text-center">
             <h4 class="alert-heading">Cargando</h4>
@@ -18,46 +19,42 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" >
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Usuarios</h4>
-                <h6 class="card-subtitle">Usuarios registrados
+                <div class="text-right">
+                    <a class="btn btn-primary" routerLink="/dashboard/medico/nuevo">
+                        <i class="fa fa-hospital-o"></i>
+                        Crear Medico
+                    </a>
+                </div>
+                <h4 class="card-title">Medicos {{medicos.length}}</h4>
+                <h6 class="card-subtitle">Medicos registrados
                 </h6>
                 <div class="table-responsive">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th>Avatar</th>
-                                <th>Correo</th>
+                                <th class="w100">Avatar</th>
                                 <th>Nombre</th>
-                                <th>Rol</th>
-                                <th>Auth</th>
-                                <th class="text-nowrap">Acciones</th>
+                                <th class="text-nowrap w100">Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Lunar probe project</td>
-                                <td>Lunar probe project</td>
-                                <td>Lunar probe project</td>
-                                <td>Lunar probe project</td>
-                                <td>Lunar probe project</td>
+                            <tr *ngFor="let med of medicos">
+                                <td ><img class="w100" [src]="med.img | imagen:'medicos'" [alt]="med.nombre"> </td>
+                                <td>{{med.nombre}}</td>
                                 <td class="text-nowrap">
-                                    <a href="#" data-toggle="tooltip" data-original-title="Editar"> <i
+                                     <a [routerLink]="['/dashboard/medico', med._id]"  data-toggle="tooltip" data-original-title="Editar"> <i
                                            class="fa fa-pencil text-inverse m-r-10"></i> </a>
-                                    <a href="#" data-toggle="tooltip" data-original-title="Borrar"> <i
+                                    <a (click)="deleteMedico(med)" class="pointer" data-toggle="tooltip" data-original-title="Borrar"> <i
                                            class="fa fa-close text-danger"></i> </a>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-
-                <button class="btn btn-secondary">Siguiente</button>
-                &nbsp;
-                <button class="btn btn-secondary">Anteriores</button>
             </div>
         </div>
     </div>
