--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -22,10 +22,10 @@
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
 
-                <li *ngFor="let item of menuItems">
+                <li *ngFor="let item of sidebarService.menu">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                        <i [class]="item.icon"></i>
-                        <span class="hide-menu">{{item.title}}
+                        <i [class]="item.icono"></i>
+                        <span class="hide-menu">{{item.titulo}}
                             <span class="label label-rouded label-themecolor pull-right">
                                 {{item.submenu.length}}
                             </span>
@@ -34,7 +34,7 @@
                     <ul aria-expanded="false" class="collapse">
                         <li *ngFor="let subMenuItem of item.submenu">
                             <a [routerLink]="subMenuItem.url" routerLinkActive="active"
-                               [routerLinkActiveOptions]="{exact: true}">{{subMenuItem.title}} </a>
+                               [routerLinkActiveOptions]="{exact: true}">{{subMenuItem.titulo}} </a>
                         </li>
                     </ul>
                 </li>
